Sidebar: removed description text, vertically-aligned names, added hover state, fixed height and margins. Avatars: fixed size

--- a/app/stylesheets/base.sass
+++ b/app/stylesheets/base.sass
@@ -149,6 +149,7 @@ html
       margin-right: 8px
       float: left
       border-radius: 2px
+      background-size: cover
     li.account 
       margin-top: 11px !important
       width: 87px
