--- a/app/stylesheets/shared/_replies.css.sass
+++ b/app/stylesheets/shared/_replies.css.sass
@@ -3,6 +3,13 @@
   position: relative
   font-family: Helvetica, sans-serif
   margin-top: 0
+  .avatar-container
+    width: 32px
+    height: 32px
+    float: left
+    background-size: cover
+    background-repeat: no-repeat
+    border-radius: 4px
   .thanks
     padding-top: 10px
     border-top: 1px dotted #ddd
