--- a/app/stylesheets/shared/_wire.css.sass
+++ b/app/stylesheets/shared/_wire.css.sass
@@ -83,11 +83,9 @@
         width: 50px
         height: 50px
         float: left
-        background-position: top center
-        background-size: auto 100%
+        background-size: cover
         background-repeat: no-repeat
         border-radius: 4px
-        background-color: #ccc
       img
         width: 100%
         height: 100%
