--- a/app/stylesheets/shared/sidebar.sass
+++ b/app/stylesheets/shared/sidebar.sass
@@ -113,7 +113,7 @@
       vertical-align: center
       padding: 12px 9px 13px 9px
       margin: 0 auto
-        top: 25px
+        top: 27px
     ul.post-box
       margin: 0
         top: 25px
@@ -241,102 +241,45 @@
 
   #directory_content
     height: 100%
-    width: 248px
-    background-color: #fdfaf4
-    padding: 0px 10px 0px 10px
+    width: 268px
+    background-color: $light-tan
+    padding: 0px
     position: relative
     overflow: hidden
     border: 1px solid #D7D5C6
     border-radius: 0px 0px 5px 5px
 
-    .your-neighbors
-      .neighbor
-        margin-left: 0px
-        border-bottom: 1px dotted
-        border-color: lighten($dark-grey, 30%)
-        box-shadow: 0px 1px 0px rgba(255, 255, 255, 1.0)
-        padding-bottom: 5px
-        padding-top: 15px
-        width: auto
-        overflow: hidden
-        white-space: nowrap
-        cursor: pointer
-        &:last-child
-          border-bottom: none
-          box-shadow: none
-
-        h4
-          font-family: $heading
-          color: $blue
-          font-weight: normal
-          font-size: 20px
-          line-height: 16px
-          margin-bottom: 0px
-          margin-right: 10px
-          text-overflow: ellipsis
-          overflow: hidden
-          text-transform: capitalize
-        p
-          font-family: $body
-          font-size: 13px
-          color: lighten($black, 10%)
-          text-overflow: ellipsis
-          overflow: hidden
-          margin-top: 2px
-          line-height: 15px
-        .avatar-container
-          width: 32px
-          height: 32px
-          border-radius: 5px
-          margin-bottom: 10px
-          overflow: hidden
-          margin-right: 10px
-          float: left
-          background-color: #ccc
-          background-position: top center
-          background-size: auto 100%
-          background-repeat: no-repeat
-          img
-            width: 100%
-            height: 100%
-    .page
+    .neighbor, .page
       margin-left: 0px
-      border-bottom: 1px dotted
-      border-color: lighten($dark-grey, 30%)
+      border-bottom: 1px solid
+      border-color: rgba(225, 225, 225, 0.45)
       box-shadow: 0px 1px 0px rgba(255, 255, 255, 1.0)
-      padding-bottom: 5px
-      padding-top: 15px
+      padding-bottom: 10px
+      padding-top: 10px
+      padding-left: 11px
       width: auto
-      overflow: hidden
-      cursor: pointer    
-      white-space: nowrap
-      border-top: 1px solid white 
-      &:first-child 
-        border-top: none
+      cursor: pointer
+      display: table
       &:last-child
         border-bottom: none
         box-shadow: none
-      /*&:hover
-        white-space: normal
-        height: inherit
-        p
-          float: right
-          width: 181px
-          margin-top: 2px
-          padding-bottom: 10px
+      &:hover
         h4
           color: $red
-          */
+      a
+        display: table
       h4
         font-family: $heading
         color: $blue
         font-weight: normal
         font-size: 18px
-        line-height: 16px
-        margin-bottom: 0px
-        margin-right: 10px
-        text-overflow: ellipsis
-        overflow: hidden
+        line-height: 18px
+        margin: 0px
+        padding-right: 10px
+        width: 240px
+        text-transform: capitalize
+        display: table-cell
+        vertical-align: middle
       p
         font-family: $body
         font-size: 13px
@@ -348,19 +291,15 @@
       .avatar-container
         width: 32px
         height: 32px
-        border-radius: 5px
-        margin-bottom: 10px
+        border-radius: 7px
         overflow: hidden
-        margin-right: 10px
+        margin-right: 12px
         float: left
-        background-color: #ccc
-        background-position: top center
-        background-size: auto 100%
+        background-size: cover
         background-repeat: no-repeat
         img
           width: 100%
           height: 100%
-   
 
 
   #your-town
